apps/radar/Qucid - working on reading in params

--- a/codebase/apps/radar/src/Qucid/Makefile.qmake
+++ b/codebase/apps/radar/src/Qucid/Makefile.qmake
@@ -1045,7 +1045,143 @@ Args.o: Args.cc Args.hh \
 		/usr/local/lrose/include/tdrp/tdrp_p.h \
 		/usr/local/lrose/include/tdrp/tdrpbuf.h \
 		/usr/local/lrose/include/tdrp/tdrp_obsolete.h \
-		Params.hh
+		Params.hh \
+		cidd.h \
+		/usr/local/lrose/include/toolsa/os_config.h \
+		/usr/local/lrose/include/dataport/port_types.h \
+		/usr/local/lrose/include/dataport/bigend.h \
+		/usr/local/lrose/include/dataport/swap.h \
+		/usr/local/lrose/include/toolsa/mem.h \
+		/usr/local/lrose/include/toolsa/membuf.h \
+		/usr/local/lrose/include/toolsa/globals.h \
+		/usr/local/lrose/include/toolsa/str.h \
+		/usr/local/lrose/include/toolsa/ansi.h \
+		/usr/local/lrose/include/toolsa/pmu.h \
+		/usr/local/lrose/include/toolsa/procmap.h \
+		/usr/local/lrose/include/toolsa/http.h \
+		/usr/local/lrose/include/toolsa/HttpURL.hh \
+		/usr/local/lrose/include/toolsa/URL.hh \
+		/usr/local/lrose/include/toolsa/pjg.h \
+		/usr/local/lrose/include/toolsa/pjg_types.h \
+		/usr/local/lrose/include/toolsa/pjg_flat.h \
+		/usr/local/lrose/include/toolsa/sockutil.h \
+		/usr/local/lrose/include/toolsa/servmap.h \
+		/usr/local/lrose/include/toolsa/utim.h \
+		/usr/local/lrose/include/toolsa/umisc.h \
+		/usr/local/lrose/include/toolsa/port.h \
+		/usr/local/lrose/include/toolsa/udatetime.h \
+		/usr/local/lrose/include/toolsa/ushmem.h \
+		/usr/local/lrose/include/toolsa/uusleep.h \
+		/usr/local/lrose/include/toolsa/ucopyright.h \
+		/usr/local/lrose/include/toolsa/xdru.h \
+		/usr/local/lrose/include/rapplot/xrs.h \
+		/usr/local/lrose/include/Spdb/StationLoc.hh \
+		/usr/local/lrose/include/rapplot/xutils.h \
+		/usr/local/lrose/include/rapplot/xudr.h \
+		/usr/local/lrose/include/rapplot/rascon.h \
+		/usr/local/lrose/include/Mdv/Mdvx_typedefs.hh \
+		/usr/local/lrose/include/Mdv/Mdvx_typedefs_32.hh \
+		/usr/local/lrose/include/Mdv/Mdvx_typedefs_64.hh \
+		/usr/local/lrose/include/Mdv/DsMdvx.hh \
+		/usr/local/lrose/include/Mdv/Mdvx.hh \
+		/usr/local/lrose/include/toolsa/DateTime.hh \
+		/usr/local/lrose/include/toolsa/DeltaTime.hh \
+		/usr/local/lrose/include/toolsa/TaFile.hh \
+		/usr/local/lrose/include/toolsa/file_io.h \
+		/usr/local/lrose/include/toolsa/heartbeat.h \
+		/usr/local/lrose/include/toolsa/MemBuf.hh \
+		/usr/local/lrose/include/Mdv/MdvxTimeList.hh \
+		/usr/local/lrose/include/Mdv/Mdvx_enums.hh \
+		/usr/local/lrose/include/Mdv/Mdvx_constants.hh \
+		/usr/local/lrose/include/Mdv/Mdvx_read.hh \
+		/usr/local/lrose/include/Mdv/Mdvx_write.hh \
+		/usr/local/lrose/include/Mdv/Mdvx_timelist.hh \
+		/usr/local/lrose/include/Mdv/Mdvx_print.hh \
+		/usr/local/lrose/include/Mdv/Mdvx_BE.hh \
+		/usr/local/lrose/include/Mdv/Mdvx_xml.hh \
+		/usr/local/lrose/include/Mdv/Mdvx_ncf.hh \
+		/usr/local/lrose/include/Mdv/Mdvx_vsect.hh \
+		/usr/local/lrose/include/didss/DsURL.hh \
+		/usr/local/lrose/include/toolsa/ThreadSocket.hh \
+		/usr/local/lrose/include/toolsa/Socket.hh \
+		/usr/local/lrose/include/toolsa/SockUtil.hh \
+		/usr/local/lrose/include/Mdv/MdvxField.hh \
+		/usr/local/lrose/include/Mdv/MdvxVsectLut.hh \
+		/usr/local/lrose/include/Mdv/MdvxProj.hh \
+		/usr/local/lrose/include/euclid/PjgMath.hh \
+		/usr/local/lrose/include/euclid/Pjg.hh \
+		/usr/local/lrose/include/euclid/PjgTypes.hh \
+		/usr/local/lrose/include/euclid/sincos.h \
+		/usr/local/lrose/include/euclid/PjgAzimEquidistMath.hh \
+		/usr/local/lrose/include/euclid/PjgPolarRadarMath.hh \
+		/usr/local/lrose/include/euclid/PjgAlbersMath.hh \
+		/usr/local/lrose/include/euclid/PjgLambertAzimMath.hh \
+		/usr/local/lrose/include/euclid/PjgLambertConfMath.hh \
+		/usr/local/lrose/include/euclid/PjgLatlonMath.hh \
+		/usr/local/lrose/include/euclid/PjgPolarStereoMath.hh \
+		/usr/local/lrose/include/euclid/PjgObliqueStereoMath.hh \
+		/usr/local/lrose/include/euclid/PjgMercatorMath.hh \
+		/usr/local/lrose/include/euclid/PjgTransMercatorMath.hh \
+		/usr/local/lrose/include/euclid/PjgVertPerspMath.hh \
+		/usr/local/lrose/include/Mdv/MdvxRemapLut.hh \
+		/usr/local/lrose/include/Mdv/DsMdvxThreaded.hh \
+		/usr/local/lrose/include/Fmq/RemoteUIQueue.hh \
+		/usr/local/lrose/include/Fmq/DsFmq.hh \
+		/usr/local/lrose/include/Fmq/Fmq.hh \
+		/usr/local/lrose/include/toolsa/compress.h \
+		/usr/local/lrose/include/Fmq/FmqDeviceFile.hh \
+		/usr/local/lrose/include/Fmq/FmqDevice.hh \
+		/usr/local/lrose/include/Fmq/FmqDeviceShmem.hh \
+		/usr/local/lrose/include/Fmq/DsFmqMsg.hh \
+		/usr/local/lrose/include/dsserver/DsServerMsg.hh \
+		/usr/local/lrose/include/didss/DsMessage.hh \
+		/usr/local/lrose/include/didss/ds_message.h \
+		Csyprod_P.hh \
+		Cdraw_P.hh \
+		Cgui_P.hh \
+		Cimages_P.hh \
+		Uparams.hh \
+		/usr/local/lrose/include/rapformats/coord_export.h \
+		cidd_macros.h \
+		cidd_structs.h \
+		cidd_colorscales.h \
+		cidd_field_data.h \
+		cidd_data_io.h \
+		Product.hh \
+		/usr/local/lrose/include/Spdb/DsSpdbThreaded.hh \
+		/usr/local/lrose/include/Spdb/DsSpdb.hh \
+		/usr/local/lrose/include/Spdb/Spdb.hh \
+		/usr/local/lrose/include/Spdb/Product_defines.hh \
+		/usr/local/lrose/include/Spdb/Spdb_typedefs.hh \
+		/usr/local/lrose/include/Spdb/DsSpdbMsg.hh \
+		SymprodRender.hh \
+		/usr/local/lrose/include/Spdb/Symprod.hh \
+		/usr/local/lrose/include/Spdb/Symprod_typedefs.hh \
+		RenderContext.hh \
+		/usr/local/lrose/include/rapplot/gplot.h \
+		/usr/local/lrose/include/toolsa/toolsa_macros.h \
+		cidd_winds.h \
+		cidd_contours.h \
+		cidd_movies.h \
+		cidd_overlays.h \
+		cidd_products.h \
+		cidd_layers.h \
+		Cterrain_P.hh \
+		Croutes_P.hh \
+		cidd_windows.h \
+		cidd_legend.h \
+		cidd_funcs.h \
+		ProductMgr.hh \
+		/usr/local/lrose/include/dsserver/DmapAccess.hh \
+		/usr/local/lrose/include/dsserver/DmapMessage.hh \
+		SymprodRenderObj.hh \
+		/usr/local/lrose/include/Spdb/SymprodObj.hh \
+		/usr/local/lrose/include/rapformats/station_reports.h \
+		/usr/local/lrose/include/rapformats/metar_decode.h \
+		/usr/local/lrose/include/rapformats/metar.h \
+		/usr/local/lrose/include/rapformats/nws_oso_local.h \
+		TimePlot.hh \
+		TimeList.hh
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o Args.o Args.cc
 
 CartManager.o: CartManager.cc CartManager.hh \
