--- a/codebase/apps/ingest/src/Makefile
+++ b/codebase/apps/ingest/src/Makefile
@@ -22,7 +22,7 @@ SUB_DIRS = \
 	CwbObs2Spdb \
 	CwbSfc2Mdv \
 	EolMobileKml2Spdb \
-	EraNc2Mdv \
+	EraGrib2Mdv \
 	GemVolXml2Dsr \
 	Gini2Mdv \
 	GoesRGLM2Spdb \
