Adding apps/ingest/src/Era5Nc2Mdv

--- a/codebase/apps/ingest/src/CMakeLists.txt
+++ b/codebase/apps/ingest/src/CMakeLists.txt
@@ -28,6 +28,7 @@ add_subdirectory (CwbObs2Spdb)
 add_subdirectory (CwbSfc2Mdv)
 add_subdirectory (EolMobileKml2Spdb)
 add_subdirectory (EraGrib2Mdv)
+add_subdirectory (Era5Nc2Mdv)
 add_subdirectory (GemVolXml2Dsr)
 add_subdirectory (Gini2Mdv)
 add_subdirectory (GoesRGLM2Spdb)
