apps/ingest/Erz5Nc2Mdv - development in progress

--- a/codebase/apps/ingest/src/Era5Nc2Mdv/CMakeLists.txt
+++ b/codebase/apps/ingest/src/Era5Nc2Mdv/CMakeLists.txt
@@ -16,7 +16,7 @@ project (Era5Nc2Mdv)
 set (SRCS
       Params.cc
       Args.cc
-      EraFile.cc
+      ReadFile.cc
       HtInterp.cc
       OutputFile.cc
       Era5Nc2Mdv.cc
