--- a/codebase/apps/ingest/src/Era5Nc2Mdv/__makefile.template
+++ b/codebase/apps/ingest/src/Era5Nc2Mdv/__makefile.template
@@ -53,7 +53,7 @@ LOC_CPPC_CFLAGS =
 HDRS = \
 	$(PARAMS_HH) \
 	Args.hh \
-	EraFile.hh \
+	ReadFile.hh \
 	HtInterp.hh \
 	OutputFile.hh \
 	Era5Nc2Mdv.hh
@@ -62,7 +62,7 @@ HDRS = \
 CPPC_SRCS = \
 	$(PARAMS_CC) \
 	Args.cc \
-	EraFile.cc \
+	ReadFile.cc \
 	HtInterp.cc \
 	OutputFile.cc \
 	Era5Nc2Mdv.cc \
