--- a/codebase/apps/ingest/src/Era5Nc2Mdv/Makefile
+++ b/codebase/apps/ingest/src/Era5Nc2Mdv/Makefile
@@ -53,7 +53,7 @@ LOC_CPPC_CFLAGS =
 HDRS = \
 	$(PARAMS_HH) \
 	Args.hh \
-	Era5Data.hh \
+	Era5File.hh \
 	Era5Nc2Mdv.hh \
 	PresInterp.hh \
 	OutputFile.hh \
@@ -62,7 +62,7 @@ HDRS = \
 CPPC_SRCS = \
 	$(PARAMS_CC) \
 	Args.cc \
-	Era5Data.cc \
+	Era5File.cc \
 	Era5Nc2Mdv.cc \
 	Main.cc \
 	PresInterp.cc \
