--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -44,7 +44,17 @@ find_package(PkgConfig REQUIRED)
 # Finding Qt on mac OSX
 
 if(APPLE)
-find_path(Qt6_DIR NAMES Qt6Config.cmake qt6-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt6 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt6 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt6 NO_DEFAULT_PATH)
+  find_package (Qt5 COMPONENTS Core REQUIRED)
+  find_package (Qt6 COMPONENTS Core REQUIRED)
+  if (Qt5_FOUND)
+    message(STATUS "Found Qt5: ${Qt5_VERSION}")
+    find_path(Qt5_DIR NAMES Qt5Config.cmake qt5-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt5 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt5 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt5 NO_DEFAULT_PATH)
+  elseif (Qt6_FOUND))
+    message(STATUS "Found Qt6: ${Qt6_VERSION}")
+    find_path(Qt6_DIR NAMES Qt6Config.cmake qt6-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt6 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt6 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt6 NO_DEFAULT_PATH)
+  else ())
+    message(FATAL_ERROR, "Qt not found.")
+  endif(Qt5_FOUND)
 endif(APPLE)
 find_package (X11)
 if (DEFINED X11_X11_LIB)
