--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -49,10 +49,10 @@ if(APPLE)
   if (Qt5_FOUND)
     message(STATUS "Found Qt5: ${Qt5_VERSION}")
     find_path(Qt5_DIR NAMES Qt5Config.cmake qt5-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt5 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt5 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt5 NO_DEFAULT_PATH)
-  elseif (Qt6_FOUND))
+  elseif (Qt6_FOUND)
     message(STATUS "Found Qt6: ${Qt6_VERSION}")
     find_path(Qt6_DIR NAMES Qt6Config.cmake qt6-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt6 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt6 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt6 NO_DEFAULT_PATH)
-  else ())
+  else ()
     message(FATAL_ERROR, "Qt not found.")
   endif(Qt5_FOUND)
 endif(APPLE)
