Generalizing cmake to support both QT5 and QT6

--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -41,19 +41,24 @@ set(PACKAGE "LROSE-CORE" CACHE STRING "")
 # Finding pkg-config
 find_package(PkgConfig REQUIRED)
 
-# Finding Qt on mac OSX
+# Finding Qt
 
-if(APPLE)
+find_package (Qt6 COMPONENTS Core REQUIRED)
+if (NOT Qt6_FOUND)
   find_package (Qt5 COMPONENTS Core REQUIRED)
-  find_package (Qt6 COMPONENTS Core REQUIRED)
+endif()
+if (Qt5_FOUND)
+  message(STATUS "Found Qt5: ${Qt5_VERSION}")
+elseif (Qt6_FOUND)
+    message(STATUS "Found Qt6: ${Qt6_VERSION}")
+else ()
+  message(FATAL_ERROR, "Qt not found.")
+endif(Qt5_FOUND)
+if(APPLE)
   if (Qt5_FOUND)
-    message(STATUS "Found Qt5: ${Qt5_VERSION}")
     find_path(Qt5_DIR NAMES Qt5Config.cmake qt5-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt5 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt5 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt5 NO_DEFAULT_PATH)
   elseif (Qt6_FOUND)
-    message(STATUS "Found Qt6: ${Qt6_VERSION}")
     find_path(Qt6_DIR NAMES Qt6Config.cmake qt6-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt6 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt6 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt6 NO_DEFAULT_PATH)
-  else ()
-    message(FATAL_ERROR, "Qt not found.")
   endif(Qt5_FOUND)
 endif(APPLE)
 find_package (X11)
